--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "image-carousel"
+    "image-carousel",
+    "slide show",
+    "pictures",
+    "image",
+    "images",
+    "carousel"
   ],
   "author": "Benjamin Gambling",
   "license": "MIT",
-  "dependencies": {
-    "@benjamin-gambling/mobile-responsive-portfolio-menu": "^1.0.2",
-    "imports-loader": "^1.1.0",
-    "masonry-layout": "^4.2.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/benjamin-gambling/image-carousel.git"
   },
+  "dependencies": {},
   "devDependencies": {
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
